Update .gitignore, add README, and modify visits data